--- a/videos.html
+++ b/videos.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="videos.html">Videos</a></li>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
     </ul>
     </nav>
 
